done fixing the bug, overflowing last image

--- a/style.css
+++ b/style.css
@@ -1,34 +1,73 @@
 * {
   box-sizing: border-box;
+  
+
 }
 
 body {
   width: 100vw;
   height: 100vh;
   margin: 0;
-  background-image: url("tinderColorHeader.png");
-  background-size: cover;
-  background-position: center;
+  background: linear-gradient(262deg, #ff7854, #fd267d);
+}
+
+#headerContainer {
+ width: 80%;
+  
+}
+
+#headerContainer::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+#gameLogo {
+  float: left;
+}
+
+nav {
+  float: right;
 }
 
 
+/*the whole game area */
 #gameArea {
-  width: 700px;
-  position: relative;
-  display: contents;
-  grid-template-rows: 3fr;
-}
-
-.gameContainer {
   width: 100%;
+  height: 90%;
+  display: grid;
+  grid-template-columns: 10% auto;
+  grid-template-rows: 1fr;
+  
 }
 
+/*game container */
+.gameContainer {
+  display: grid;
+  grid-template-columns: repeat(6, auto);
+  grid-template-rows: auto auto auto;
+
+  width: 95%;
+  height: 95%;
+}
+
+/* stats */
+.gameStats {
+  max-width: 100%;
+  grid-row-start: 1;
+  grid-column-start: 1;
+  grid-column-end: 1;
+  grid-row-end: 1;
+}
 .cardImage {
-  height:170px;
-  width:180px;
+  /*height:170px;
+  width:180px; */
+  max-width: 100%;
+  max-height: 100%;
+  justify-self: stretch;
   position: relative;
   border-style:outset;
-  display: inline-block;
+  
 }
 
 .cardImage img {
@@ -37,11 +76,12 @@ body {
 }
 
 .matchedCards {
-  height:170px;
-  width:180px;
+  
+  max-width: 100%;
+  max-height: 100%;
   position: relative;
   border-style:outset;
-  display: inline-block;
+  
 }
 
 .matchedCards img {
@@ -51,7 +91,7 @@ body {
 
 
 .image1, .image2, .image3, .back, .lastImage {
-  height: 100%;
+  height: 100%; 
   width: 100%;
 
   position: absolute;
@@ -59,24 +99,17 @@ body {
 }
 
 .matchedImg {
-  position: relative;
+  width: 100%;
+  height: 100%;
+  position: absolute;
   z-index: 9999;
   opacity: 0.5;
-}
-
-
-/* stats */
-.gameStats {
-  display: inline-block;
-  width: 20%;
-  height: 100%;
-  float: left;
 }
 
 .matchesLog,
 .triesLog {
   display: inline-block;
-  color: ivory;
+  color: black;
   font-size: 36px;
   text-indent: 120px
 }
@@ -84,7 +117,7 @@ body {
 
 h1 {
   line-height: 5;
-  color: ivory;
+  color: black;
 }
 
 /*  the header */
@@ -93,14 +126,17 @@ h1 {
   height: 20%;
   font-size: 22px;
   font-style: "candara";
-  color: ivory;
   background-size: 90%;
   background-repeat: no-repeat;
   background-position: right;
 }
 
+h1 {
+  color: white;
+}
 #HeaderContainer div {
   display: inline-block;
+  margin: auto;
 }
 .divsMerger {
   display: inline-block;
@@ -108,7 +144,21 @@ h1 {
 
 }
 
-.tinderOverLay {
+.tinderLogo {
+  width: 20%;
+  height: 20%;
+  position: absolute;
+  left: 0;
+}
+
+#gameLogo, #gameLogo2 {
+  float: left;
+}
+
+#gameLogo2{
+
+}
+/*.tinderOverLay {
   height: 20%;
   width:100%;
   color: ivory;
